--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="http://127.0.0.1:5500/%20Home.html">Home</a></li>
-            <li><a href="http://127.0.0.1:5500/Accounts.html#">Accounts</a></li>
-            <li><a href="http://127.0.0.1:5500/Transactions.html">Transactions</a></li>
-            <li><a href="http://127.0.0.1:5500/Loans.html#">Loans</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="Accounts.html">Accounts</a></li>
+            <li><a href="Transactions.html">Transactions</a></li>
+            <li><a href="Loans.html">Loans</a></li>
         </ul>
     </nav>
      <div class="main">
